--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <div class="jumbotron">
         <div class="container text-center">
             <h1><b>台灣鐵路/軌道運行圖</b></h1>
-            <h2>本網站專門收入完整台灣鐵路時間表運行圖，請多加利用，謝謝(by mochi)</h2>
-            <h3>未來若要繼續修改運行圖，請自行至<a href="https://github.com/mochi-artist/"
+            <h2>本網站專門收入完整台灣鐵路時間表運行圖，請多加利用，謝謝</h2>
+            <h3>未來若要繼續修改運行圖，請自行至<a href="https://github.com/mochi-artist/artist"
                     target="_blank">GitHub專案頁面</a>找尋，感謝各位麻糬們</h3>
             <h3>今天日期：<span id="today_date"></span></h3>
         </div>
