--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
 <script src="js/util.js"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    </script>
     const diagram_data = localStorage.getItem('is_confirmed');
     const today_date = getTodayFormattedDate();
 
