--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                     <a href='diagram_output.html?lineKind=LINE_WSEA&scrollToCurrentTime=true'
                         class="btn btn-success btn-lg" role="button">海線 (竹南-彰化)</a>
                     <a href='diagram_output.html?lineKind=LINE_WS&scrollToCurrentTime=true'
-                        class="btn btn-success btn-lg" role="button">南段 (彰化-高雄)</a>
-                    <a href='diagram_output.html?lineKind=LINE_P&scrollToCurrentTime=true'
-                        class="btn btn-success btn-lg" role="button">屏東線 (高雄-枋寮)</a>
+                        class="btn btn-success btn-lg" role="button">南段 (彰化-枋寮)</a>
+                 <!--    <a href='diagram_output.html?lineKind=LINE_P&scrollToCurrentTime=true'
+                        class="btn btn-success btn-lg" role="button">屏東線 (高雄-枋寮)</a> -->
                 </div>
 
                 <h3>東部幹線與南迴線</h3>
@@ -69,9 +69,9 @@
                     <a href='diagram_output.html?lineKind=LINE_PX&scrollToCurrentTime=true'
                         class="btn btn-success btn-lg" role="button">平溪深澳線</a>
                     <a href='diagram_output.html?lineKind=LINE_NW&scrollToCurrentTime=true'
-                        class="btn btn-success btn-lg" role="button">內灣線</a>
-                    <a href='diagram_output.html?lineKind=LINE_LJ&scrollToCurrentTime=true'
-                        class="btn btn-success btn-lg" role="button">六家線</a>
+                        class="btn btn-success btn-lg" role="button">六家/內灣線</a>
+                 <!--   <a href='diagram_output.html?lineKind=LINE_LJ&scrollToCurrentTime=true'
+                        class="btn btn-success btn-lg" role="button">六家線</a> -->
                     <a href='diagram_output.html?lineKind=LINE_J&scrollToCurrentTime=true'
                         class="btn btn-success btn-lg" role="button">集集線</a>
                     <a href='diagram_output.html?lineKind=LINE_SL&scrollToCurrentTime=true'
@@ -86,8 +86,8 @@
                     <a href='lines.html?lineKind=LINE_WN' class="btn btn-primary btn-lg" role="button">北段 (基隆-竹南)</a>
                     <a href='lines.html?lineKind=LINE_WM' class="btn btn-primary btn-lg" role="button">山線 (竹南-彰化)</a>
                     <a href='lines.html?lineKind=LINE_WSEA' class="btn btn-primary btn-lg" role="button">海線 (竹南-彰化)</a>
-                    <a href='lines.html?lineKind=LINE_WS' class="btn btn-primary btn-lg" role="button">南段 (彰化-高雄)</a>
-                    <a href='lines.html?lineKind=LINE_P' class="btn btn-primary btn-lg" role="button">屏東線 (高雄-枋寮)</a>
+                    <a href='lines.html?lineKind=LINE_WS' class="btn btn-primary btn-lg" role="button">南段 (彰化-枋寮)</a>
+                 <!--   <a href='lines.html?lineKind=LINE_P' class="btn btn-primary btn-lg" role="button">屏東線 (高雄-枋寮)</a> -->
                 </div>
                 <h3>東部幹線與南迴線</h3>
                 <div class="btn-group-vertical btn-block">
@@ -99,8 +99,8 @@
                 <h3>支線</h3>
                 <div class="btn-group-vertical btn-block">
                     <a href='lines.html?lineKind=LINE_PX' class="btn btn-primary btn-lg" role="button">平溪深澳線</a>
-                    <a href='lines.html?lineKind=LINE_NW' class="btn btn-primary btn-lg" role="button">內灣線</a>
-                    <a href='lines.html?lineKind=LINE_LJ' class="btn btn-primary btn-lg" role="button">六家線</a>
+                    <a href='lines.html?lineKind=LINE_NW' class="btn btn-primary btn-lg" role="button">六家/內灣線</a>
+                  <!--  <a href='lines.html?lineKind=LINE_LJ' class="btn btn-primary btn-lg" role="button">六家線</a> -->
                     <a href='lines.html?lineKind=LINE_J' class="btn btn-primary btn-lg" role="button">集集線</a>
                     <a href='lines.html?lineKind=LINE_SL' class="btn btn-primary btn-lg" role="button">沙崙線</a>
                 </div>
