--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <a href='lines.html?lineKind=LINE_SL' class="btn btn-primary btn-lg" role="button">沙崙線</a>
                 </div>
             </div>
-            <div class="col-md-4 portfolio-item">
+          <!--  <div class="col-md-4 portfolio-item">
                 <h2><b>其他鐵路運行圖圖庫</b></h2>
                 <div class="alert alert-danger" role="alert">提供其他軌道運輸的靜態運行圖</a></div>
                 <h3>阿里山森林鐵路</h3>
@@ -133,7 +133,7 @@
                     <a href='https://www.facebook.com/traDiagram/' class="btn btn-info btn-lg" role="button">facebook粉絲頁</a>
                     <a href='privacy.html' class="btn btn-info btn-lg" role="button">隱私權政策</a>
                     <a href='https://play.google.com/store/apps/details?id=com.chohsunlu.tradiagram' class="btn btn-info btn-lg" role="button">台鐵運行圖App(Google Play)</a>
-                </div>
+                </div>-->
             </div>
         </div>
         <br>
