--- a/about.html
+++ b/about.html
@@ -59,15 +59,15 @@
                         <li>西部幹線北段（基隆-竹南）</li>
                         <li>西部幹線台中線（竹南-彰化，經苗栗）</li>
                         <li>西部幹線海岸線（竹南-彰化，經大甲）</li>
-                        <li>西部幹線南段（彰化-高雄）</li>
-                        <li>屏東線（高雄-枋寮）</li>
+                        <li>西部幹線南段（彰化-枋寮）</li>
+                     <!--   <li>屏東線（高雄-枋寮）</li> -->
                         <li>南迴線（枋寮-台東）</li>
                         <li>台東線（花蓮-台東）</li>
                         <li>北迴線（蘇澳新-花蓮）</li>
                         <li>宜蘭線（八堵-蘇澳）</li>
                         <li>平溪深澳線（八斗子-菁桐）</li>
-                        <li>內灣線（新竹-內灣）</li>
-                        <li>六家線（新竹-六家）</li>
+                        <li>六家/內灣線（新竹-六家/內灣）</li>
+                    <!--    <li>六家線（新竹-六家）</li> -->
                         <li>集集線（二水-車埕）</li>
                         <li>沙崙線（中洲-沙崙）</li>
                         <!-- <li>阿里山線 (嘉義-阿里山)</li>
