--- a/navbar.html
+++ b/navbar.html
@@ -18,8 +18,8 @@
                         <li><a href='diagram_output.html?lineKind=LINE_WN&scrollToCurrentTime=true'>北段 (基隆-竹南)</a></li>
                         <li><a href='diagram_output.html?lineKind=LINE_WM&scrollToCurrentTime=true'>山線 (竹南-彰化)</a></li>
                         <li><a href='diagram_output.html?lineKind=LINE_WSEA&scrollToCurrentTime=true'>海線 (竹南-彰化)</a></li>
-                        <li><a href='diagram_output.html?lineKind=LINE_WS&scrollToCurrentTime=true'>南段 (彰化-高雄)</a></li>
-                        <li><a href='diagram_output.html?lineKind=LINE_P&scrollToCurrentTime=true'>屏東線 (高雄-枋寮)</a></li>
+                        <li><a href='diagram_output.html?lineKind=LINE_WS&scrollToCurrentTime=true'>南段 (彰化-枋寮)</a></li>
+                      <!--  <li><a href='diagram_output.html?lineKind=LINE_P&scrollToCurrentTime=true'>屏東線 (高雄-枋寮)</a></li> -->
                         <li role="separator" class="divider"></li>
                         <li><a href='diagram_output.html?lineKind=LINE_I&scrollToCurrentTime=true'>宜蘭線 (八堵-蘇澳)</a></li>
                         <li><a href='diagram_output.html?lineKind=LINE_N&scrollToCurrentTime=true'>北迴線 (蘇澳新-花蓮)</a></li>
@@ -27,8 +27,8 @@
                         <li><a href='diagram_output.html?lineKind=LINE_S&scrollToCurrentTime=true'>南迴線 (台東-枋寮)</a></li>
                         <li role="separator" class="divider"></li>
                         <li><a href='diagram_output.html?lineKind=LINE_PX&scrollToCurrentTime=true'>平溪深澳線</a></li>
-                        <li><a href='diagram_output.html?lineKind=LINE_NW&scrollToCurrentTime=true'>內灣線</a></li>
-                        <li><a href='diagram_output.html?lineKind=LINE_LJ&scrollToCurrentTime=true'>六家線</a></li>
+                        <li><a href='diagram_output.html?lineKind=LINE_NW&scrollToCurrentTime=true'>六家/內灣線</a></li>
+                     <!--   <li><a href='diagram_output.html?lineKind=LINE_LJ&scrollToCurrentTime=true'>六家線</a></li> -->
                         <li><a href='diagram_output.html?lineKind=LINE_J&scrollToCurrentTime=true'>集集線</a></li>
                         <li><a href='diagram_output.html?lineKind=LINE_SL&scrollToCurrentTime=true'>沙崙線</a></li>
                     </ul>
@@ -39,8 +39,8 @@
                         <li><a href='lines.html?lineKind=LINE_WN'>北段 (基隆-竹南)</a></li>
                         <li><a href='lines.html?lineKind=LINE_WM'>山線 (竹南-彰化)</a></li>
                         <li><a href='lines.html?lineKind=LINE_WSEA'>海線 (竹南-彰化)</a></li>
-                        <li><a href='lines.html?lineKind=LINE_WS'>南段 (彰化-高雄)</a></li>
-                        <li><a href='lines.html?lineKind=LINE_P'>屏東線 (高雄-枋寮)</a></li>
+                        <li><a href='lines.html?lineKind=LINE_WS'>南段 (彰化-枋寮)</a></li>
+                       <!--   <li><a href='lines.html?lineKind=LINE_P'>屏東線 (高雄-枋寮)</a></li> -->
                         <li role="separator" class="divider"></li>
                         <li><a href='lines.html?lineKind=LINE_I'>宜蘭線 (八堵-蘇澳)</a></li>
                         <li><a href='lines.html?lineKind=LINE_N'>北迴線 (蘇澳新-花蓮)</a></li>
@@ -48,8 +48,8 @@
                         <li><a href='lines.html?lineKind=LINE_S'>南迴線 (台東-枋寮)</a></li>
                         <li role="separator" class="divider"></li>
                         <li><a href='lines.html?lineKind=LINE_PX'>平溪深澳線</a></li>
-                        <li><a href='lines.html?lineKind=LINE_NW'>內灣線</a></li>
-                        <li><a href='lines.html?lineKind=LINE_LJ'>六家線</a></li>
+                        <li><a href='lines.html?lineKind=LINE_NW'>六家/內灣線</a></li>
+                         <!--  <li><a href='lines.html?lineKind=LINE_LJ'>六家線</a></li> -->
                         <li><a href='lines.html?lineKind=LINE_J'>集集線</a></li>
                         <li><a href='lines.html?lineKind=LINE_SL'>沙崙線</a></li>
                         <!-- <li role="separator" class="divider"></li>
